[workspace]
members = [".", "codegen", "framework"]

[package]
name = "portrait"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/portrait"
homepage = "https://github.com/SOF3/portrait"
readme = "README.md"
description = "Fills an `impl` with the associated items required by the trait."

[dependencies]
portrait-codegen = {version = "0.1.0", path = "./codegen"}
