[workspace]
members = [".", "codegen", "framework"]

[package]
name = "portrait"
version = "0.2.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/portrait"
homepage = "https://github.com/SOF3/portrait"
readme = "README.md"
description = "Fills an `impl` with the associated items required by the trait."

[features]
default = ["default-filler", "delegate-filler", "log-filler"]
default-filler = ["portrait-codegen/default-filler"]
delegate-filler = ["portrait-codegen/delegate-filler"]
log-filler = ["portrait-codegen/log-filler"]

[dependencies]
portrait-codegen = {version = "0.2.0", path = "./codegen"}

[dev-dependencies]
log = "0.4.17"
