[package]
name = "portrait-codegen"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/portrait"
homepage = "https://github.com/SOF3/portrait"
description = "Internal procedural macros for portrait"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.50"
quote = "1.0.23"
rand = "0.8.5"
syn = {version = "1.0.107", features = ["full", "visit"]}
portrait-framework = {version = "0.1.0", path = "../framework"}
