[package]
name = "portrait-codegen"
version = "0.3.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/portrait"
homepage = "https://github.com/SOF3/portrait"
description = "Internal procedural macros for portrait"

[features]
default-filler = []
delegate-filler = []
derive-delegate-filler = []
log-filler = []

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.50"
quote = "1.0.23"
rand = "0.8.5"
itertools = "0.11.0"
syn = {version = "2.0.4", features = ["full", "visit", "visit-mut"]}
portrait-framework = {version = "0.3.0", path = "../framework"}
